[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "rna_gpf"
version = "0.0.1"
description = "Package for prediction and analysis of RNA genotype-phenotype-fitness maps"
authors = [
  { name = "Leander Goldbach", email = "leander.goldbach@gmail.com" },
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"

